--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4cbd66de",
+   "id": "a4433eae",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "06d8424b",
+   "id": "0312401d",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313a0199",
+   "id": "264b23e0",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4dd0257d",
+   "id": "557aa772",
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c9e06f70",
+   "execution_count": 34,
+   "id": "6a3e2598",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"./data_final.csv\", sep=\"\\t\")\n"
+    "df = pd.read_csv(\"./data_final.csv\", sep=\"\\t\", decimal=\",\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "59ce6fff",
+   "execution_count": 39,
+   "id": "0a79fc48",
    "metadata": {},
    "outputs": [
     {
@@ -212,47 +212,66 @@
        "      <th></th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
-       "      <th>categorie</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>763</td>\n",
-       "      <td>763</td>\n",
-       "      <td>763</td>\n",
+       "      <td>763.000000</td>\n",
+       "      <td>763.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>763</td>\n",
-       "      <td>763</td>\n",
-       "      <td>2</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.495023</td>\n",
+       "      <td>0.505776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>0,427760884054975</td>\n",
-       "      <td>0,974923327197949</td>\n",
-       "      <td>b</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.292947</td>\n",
+       "      <td>0.289172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>400</td>\n",
+       "      <th>min</th>\n",
+       "      <td>0.001140</td>\n",
+       "      <td>0.000567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.226306</td>\n",
+       "      <td>0.265336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.493301</td>\n",
+       "      <td>0.510575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.739491</td>\n",
+       "      <td>0.753354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.996611</td>\n",
+       "      <td>0.999270</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        x                  y categorie\n",
-       "count                 763                763       763\n",
-       "unique                763                763         2\n",
-       "top     0,427760884054975  0,974923327197949         b\n",
-       "freq                    1                  1       400"
+       "                x           y\n",
+       "count  763.000000  763.000000\n",
+       "mean     0.495023    0.505776\n",
+       "std      0.292947    0.289172\n",
+       "min      0.001140    0.000567\n",
+       "25%      0.226306    0.265336\n",
+       "50%      0.493301    0.510575\n",
+       "75%      0.739491    0.753354\n",
+       "max      0.996611    0.999270"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc6a734",
+   "id": "1b1a777e",
    "metadata": {},
    "outputs": [],
    "source": []
