--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "01446165",
+   "id": "f4ec560a",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "abb68ec4",
+   "id": "d0efe827",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e190e9",
+   "id": "53ee35ce",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8186a905",
+   "id": "f9001e2f",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4de2b78a",
+   "id": "cf10a689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "08b67116",
+   "id": "d2cf6d38",
    "metadata": {},
    "outputs": [
     {
@@ -216,12 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68810a63",
+   "execution_count": 53,
+   "id": "eaaa78ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_a = "
+    "cat_a = df[df.categorie == \"a\"]\n",
+    "cat_b = df[df.categorie == \"b\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "2513c08e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61e9a85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(cat_a.x, colo)"
    ]
   }
  ],
