--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4f417ca0",
+   "id": "d7094c60",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4ab999cf",
+   "id": "9b4e8f64",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e7154f",
+   "id": "e9a65aff",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1e133e75",
+   "id": "3e347735",
    "metadata": {},
    "outputs": [
     {
@@ -173,9 +173,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79612aca",
+   "metadata": {},
+   "source": [
+    "## Ouverture avec Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f16ea8b3",
+   "id": "1d2bde30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bd0c8d3d",
+   "id": "8288a112",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6d4011fb",
+   "id": "cf0447b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "79fd3129",
+   "id": "803ec133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ef481523",
+   "id": "070d7a50",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d6fcfb0f",
+   "id": "133fe96e",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e79e283f",
+   "id": "8eaa934f",
    "metadata": {},
    "outputs": [],
    "source": []
