--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d7094c60",
+   "id": "c02e1b5b",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9b4e8f64",
+   "id": "7b6cf4eb",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a65aff",
+   "id": "e397d677",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3e347735",
+   "id": "5ea345b4",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79612aca",
+   "id": "eed214ca",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1d2bde30",
+   "id": "793e0fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8288a112",
+   "id": "7d326b68",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cf0447b5",
+   "id": "6fdbd42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "803ec133",
+   "id": "a1f7d5ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "070d7a50",
+   "id": "c5d550d3",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "133fe96e",
+   "id": "60da2096",
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +361,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab09eb25",
+   "metadata": {},
+   "source": [
+    "# POO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eaa934f",
+   "id": "2e5eafb7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MonType:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
