--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c02e1b5b",
+   "id": "e473e0d4",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7b6cf4eb",
+   "id": "9833fe39",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e397d677",
+   "id": "0aabc1b0",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5ea345b4",
+   "id": "a5ab4a10",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed214ca",
+   "id": "e7397259",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "793e0fde",
+   "id": "278b6bf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7d326b68",
+   "id": "8d396514",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6fdbd42a",
+   "id": "fc146f26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a1f7d5ae",
+   "id": "b72edbee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c5d550d3",
+   "id": "763ae84e",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "60da2096",
+   "id": "d549d64d",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab09eb25",
+   "id": "e1423bfb",
    "metadata": {},
    "source": [
     "# POO"
@@ -370,14 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e5eafb7",
+   "execution_count": 63,
+   "id": "f90f14b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "class MonType:\n",
-    "    "
+    "    pass \n",
+    "\n",
+    "mon_objet = MonType()\n",
+    "print(mon_objet)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a23815e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
