--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e473e0d4",
+   "id": "40c538aa",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9833fe39",
+   "id": "54562c73",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aabc1b0",
+   "id": "868c04ba",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a5ab4a10",
+   "id": "eaf88cfe",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7397259",
+   "id": "5b6f046d",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "278b6bf0",
+   "id": "f19f9cdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8d396514",
+   "id": "200b60cd",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fc146f26",
+   "id": "f0a393f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b72edbee",
+   "id": "1f6147b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "763ae84e",
+   "id": "2f28e12f",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d549d64d",
+   "id": "939ac062",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1423bfb",
+   "id": "1df2d59a",
    "metadata": {},
    "source": [
     "# POO"
@@ -370,22 +370,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "f90f14b7",
+   "execution_count": 66,
+   "id": "ff9235a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MonType object at 0x7fbab78f4b50>\n",
+      "<__main__.MonType object at 0x7fbab78f4b20>\n"
+     ]
+    }
+   ],
    "source": [
     "class MonType:\n",
     "    pass \n",
     "\n",
     "mon_objet = MonType()\n",
-    "print(mon_objet)"
+    "print(mon_objet)\n",
+    "\n",
+    "mon_objet2 = MonType()\n",
+    "print(mon_objet2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a6a8f3c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Voiture object at 0x7fbab78f4f40>\n",
+      "<__main__.Voiture object at 0x7fbab78f0610>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Voiture:\n",
+    "    pass\n",
+    "\n",
+    "clio = Voiture()\n",
+    "print(clio)\n",
+    "\n",
+    "megane = Voiture()\n",
+    "print(megane)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a23815e",
+   "id": "b462426b",
    "metadata": {},
    "outputs": [],
    "source": []
