--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "32209c64",
+   "id": "6b4ce293",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4067efee",
+   "id": "d36c136b",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff0d295",
+   "id": "bc45271a",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "34b3258b",
+   "id": "37cefb9d",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a46499",
+   "id": "6af38d7e",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4619a20e",
+   "id": "fc8aacc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "81b54a6c",
+   "id": "633b0a97",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4aef543f",
+   "id": "edadd8bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e03cee49",
+   "id": "12e5473b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "45db9831",
+   "id": "f2db4f13",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b09638b1",
+   "id": "e7ae972e",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa7457b",
+   "id": "1ff35310",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "0b052591",
+   "id": "ca3c2829",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a3bbfe42",
+   "id": "3bc263b9",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,8 @@
    ],
    "source": [
     "class Voiture:\n",
-    "    pass\n",
+    "    def __init__(self):\n",
+    "        self.\n",
     "\n",
     "clio = Voiture()\n",
     "print(clio)\n",
@@ -423,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e408424a",
+   "id": "25d44403",
    "metadata": {},
    "outputs": [],
    "source": []
