--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6b4ce293",
+   "id": "122c1f5c",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d36c136b",
+   "id": "e8716102",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc45271a",
+   "id": "0cd95bc8",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "37cefb9d",
+   "id": "84abf7a5",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af38d7e",
+   "id": "3583fbbf",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fc8aacc8",
+   "id": "e1491234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "633b0a97",
+   "id": "81902e87",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "edadd8bc",
+   "id": "59d7c8bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "12e5473b",
+   "id": "2683df45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f2db4f13",
+   "id": "78829cb2",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e7ae972e",
+   "id": "a7769656",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff35310",
+   "id": "bdacdd55",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ca3c2829",
+   "id": "aa6bea2b",
    "metadata": {},
    "outputs": [
     {
@@ -396,26 +396,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "3bc263b9",
+   "execution_count": 71,
+   "id": "490328fd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Voiture object at 0x7fbab78f4f40>\n",
-      "<__main__.Voiture object at 0x7fbab78f0610>\n"
+     "ename": "AttributeError",
+     "evalue": "'Voiture' object has no attribute 'couleur'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [71], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;66;03m#self.couleur = \"verte\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m clio \u001b[38;5;241m=\u001b[39m Voiture()\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(clio, clio\u001b[38;5;241m.\u001b[39mcouleur)\n\u001b[1;32m      9\u001b[0m megane \u001b[38;5;241m=\u001b[39m Voiture()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(megane)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Voiture' object has no attribute 'couleur'"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
     "    def __init__(self):\n",
-    "        self.\n",
-    "\n",
+    "        pass\n",
+    "        #self.couleur = \"verte\"\n",
+    "        \n",
     "clio = Voiture()\n",
-    "print(clio)\n",
+    "print(clio, clio.couleur)\n",
     "\n",
     "megane = Voiture()\n",
     "print(megane)\n"
@@ -424,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d44403",
+   "id": "1ef878c0",
    "metadata": {},
    "outputs": [],
    "source": []
