--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "122c1f5c",
+   "id": "c6105530",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e8716102",
+   "id": "fe17d266",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd95bc8",
+   "id": "f5400bfe",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "84abf7a5",
+   "id": "d22005b4",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3583fbbf",
+   "id": "85586a45",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e1491234",
+   "id": "88d5ef23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "81902e87",
+   "id": "091336d5",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "59d7c8bc",
+   "id": "5482bf19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2683df45",
+   "id": "f9270d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "78829cb2",
+   "id": "e8b00f9e",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a7769656",
+   "id": "ec723aec",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdacdd55",
+   "id": "2b362285",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "aa6bea2b",
+   "id": "64b28444",
    "metadata": {},
    "outputs": [
     {
@@ -396,39 +396,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "490328fd",
+   "execution_count": 73,
+   "id": "d8920e3e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Voiture' object has no attribute 'couleur'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [71], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;66;03m#self.couleur = \"verte\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m clio \u001b[38;5;241m=\u001b[39m Voiture()\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(clio, clio\u001b[38;5;241m.\u001b[39mcouleur)\n\u001b[1;32m      9\u001b[0m megane \u001b[38;5;241m=\u001b[39m Voiture()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(megane)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Voiture' object has no attribute 'couleur'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Voiture object at 0x7fbab78f0250> verte\n",
+      "<__main__.Voiture object at 0x7fbab78f44c0> verte\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
     "    def __init__(self):\n",
-    "        pass\n",
-    "        #self.couleur = \"verte\"\n",
+    "        self.couleur = \"verte\"\n",
     "        \n",
     "clio = Voiture()\n",
     "print(clio, clio.couleur)\n",
     "\n",
     "megane = Voiture()\n",
-    "print(megane)\n"
+    "print(megane, megane.couleur)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef878c0",
+   "id": "053f422d",
    "metadata": {},
    "outputs": [],
    "source": []
