--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c6105530",
+   "id": "ab13214a",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fe17d266",
+   "id": "6462f0c4",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5400bfe",
+   "id": "8a3b21a5",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d22005b4",
+   "id": "b49cd274",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85586a45",
+   "id": "9cab2efe",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "88d5ef23",
+   "id": "e056e708",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "091336d5",
+   "id": "c833f04b",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5482bf19",
+   "id": "44dae442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f9270d38",
+   "id": "6c309f81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e8b00f9e",
+   "id": "5c690526",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ec723aec",
+   "id": "42708acf",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b362285",
+   "id": "2afd0ef6",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "64b28444",
+   "id": "8cd0b5f6",
    "metadata": {},
    "outputs": [
     {
@@ -396,35 +396,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "d8920e3e",
+   "execution_count": 77,
+   "id": "3ced3acf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab78f0250> verte\n",
-      "<__main__.Voiture object at 0x7fbab78f44c0> verte\n"
+      "<__main__.Voiture object at 0x7fbab790c370> rouge\n",
+      "<__main__.Voiture object at 0x7fbab790c2b0> bleu\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
-    "    def __init__(self):\n",
-    "        self.couleur = \"verte\"\n",
+    "    def __init__(self, la_couleur_que_je_veux):\n",
+    "        self.couleur = la_couleur_que_je_veux\n",
     "        \n",
-    "clio = Voiture()\n",
+    "clio = Voiture(\"rouge\")\n",
     "print(clio, clio.couleur)\n",
     "\n",
-    "megane = Voiture()\n",
+    "megane = Voiture(\"bleu\")\n",
     "print(megane, megane.couleur)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "053f422d",
+   "id": "417c2110",
    "metadata": {},
    "outputs": [],
    "source": []
