--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab13214a",
+   "id": "08b72f1b",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6462f0c4",
+   "id": "e1b4b4fb",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3b21a5",
+   "id": "c6efa1a1",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b49cd274",
+   "id": "907f8c15",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cab2efe",
+   "id": "cb00df2d",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e056e708",
+   "id": "4c38a67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c833f04b",
+   "id": "0c40d5d3",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "44dae442",
+   "id": "0f2c7382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6c309f81",
+   "id": "1f871538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5c690526",
+   "id": "32d318d2",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "42708acf",
+   "id": "751fbe46",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2afd0ef6",
+   "id": "ee803d3f",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "8cd0b5f6",
+   "id": "a704427f",
    "metadata": {},
    "outputs": [
     {
@@ -396,35 +396,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "3ced3acf",
+   "execution_count": 82,
+   "id": "e8e86407",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab790c370> rouge\n",
-      "<__main__.Voiture object at 0x7fbab790c2b0> bleu\n"
+      "<__main__.Voiture object at 0x7fbab7ae5400> rouge auto\n",
+      "<__main__.Voiture object at 0x7fbab7ae53d0> bleu\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
-    "    def __init__(self, la_couleur_que_je_veux):\n",
+    "    def __init__(self, la_couleur_que_je_veux, type_de_boite):\n",
     "        self.couleur = la_couleur_que_je_veux\n",
+    "        self.boite = type_de_boite\n",
     "        \n",
-    "clio = Voiture(\"rouge\")\n",
-    "print(clio, clio.couleur)\n",
+    "clio = Voiture(\"rouge\", \"auto\")\n",
+    "print(clio, clio.couleur, clio.boite)\n",
     "\n",
-    "megane = Voiture(\"bleu\")\n",
-    "print(megane, megane.couleur)\n"
+    "megane = Voiture(\"bleu\", \"manuelle\")\n",
+    "print(megane, megane.couleur)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417c2110",
+   "id": "9105f26b",
    "metadata": {},
    "outputs": [],
    "source": []
